--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,57 +1,69 @@
-.footer_container{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-background: linear-gradient(to Left, #fff,#333);
-width: 100%;
-height: 300px;
-display: flex;
-flex-direction: row;
-align-items: center;
-flex-wrap: wrap;
+.footer_container {
+  background: linear-gradient(to Left, #fff, #333);
+  width: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
 }
-.footer_sections{
-    width: 100%;
-    height: 200px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+.footer_sections {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
-.links{
-    width: 250px;
-    height: 200px;
+.links {
+  width: 250px;
+  height: 200px;
 }
 
-.links_nav{
-    width: 100%;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.links_nav {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.imgBox{
-    width: 200px;
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.imgBox {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.img{
-    width: 200px;
-    height: 200px;
-    backdrop-filter: cover;
+.img {
+  width: 200px;
+  height: 200px;
+  backdrop-filter: cover;
 }
-.copyrigth{
-    width: 100%;
-    height: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    font: 30px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    
+.copyrigth {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font: 30px;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+.nav_link {
+  display: block;
+  padding: 15px;
+  border-radius: 5px;
+  font-size: 1em;
+  font-weight: 700;
+  color: #fff;
+  text-transform: uppercase;
+  transition: 0.5s;
+}
+
+.nav_link:hover {
+  background-color: blue;
+  color: bisque;
+  cursor: pointer;
 }
