--- a/src/components/contextGrid/context.module.css
+++ b/src/components/contextGrid/context.module.css
@@ -6,27 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px 30px;
-}
-.container::before {
-    content: "";
-    position: absolute;
-    top: 120px;
-    left: 60;
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    background: linear-gradient(#ffc107, #e91e63);
-    transform: translate(-250px, -120px);
-  }
-.container::after{
-    content: "";
-    position: absolute;
-    width: 350px;
-    height: 350px;
-    background: linear-gradient(#2196f3, #31ff38);
-    border-radius: 50%;
-    transform: translate(250px, 120px);
+  padding: 30px;
 }
 
 .grid{
@@ -36,6 +16,6 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 30px;
+    gap: 40px;
 
 }
