--- a/src/components/fomulario/create.module.css
+++ b/src/components/fomulario/create.module.css
@@ -28,10 +28,15 @@ z-index: 1000;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+}
+.container .form .containerImg img{
+  width: 80px;
+  object-fit: cover;
 }
 .container .form .containerImg a{
     display: block;
-    margin-top: 35px;
+    margin-top: 10px;
     padding: 10px 20px;
     background-color: white;
     border-radius: 10px;
@@ -40,7 +45,8 @@ z-index: 1000;
     transition: all 0.3s ease;
 }
 .container .form .containerImg a:hover{
-    transform: scale(1.1)
+    transform: scale(1.1);
+    background-color: blue;
 }
 .container .form .containerName {
     width: 100%;
